# Engineering_Image_Retrieval_System_Training

./: .dockerignore  .gitignore  Dockerfile  README.md  data.dvc  dataset.dvc  docker-compose.yml  main.py  main_training.py  pyproject.toml  v4_config.yaml  專案規劃.drawio
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
demo/: demo.py  demo_build_image_index.py  demo_v2.0.py
src/: README.md  image_preprocessing.py  image_preprocessing2.py  image_preprocessing3.py  image_preprocessing_batch.py  image_preprocessing_batch2.py  image_preprocessing_batch3.py  image_preprocessing_batch_multiprocess.py  image_preprocessing_batch_multiprocess2.py  pdf_to_image.py  pdf_to_image2.py  split_dataset.py  visualize_augmentations.py
src/ChromaDB_Test/: build_image_index.py  image_retrieval_system.py  image_retrieval_system_benchmark.py
src/ChromaDB_Test/001/: chromadb_test001.py  main_gui001-1 copy.py  main_gui001-1.py  main_gui001.py  search_app001.py
src/ChromaDB_Test/002/: build_image_index.py  main_gui002-2.py  main_gui002.py  search_app002.py
src/core/: interfaces.py
src/data_analysis/: cad_feature_extractor.py  classify_pdf_type.py  classify_pdf_type01.py  classify_pdf_type02.py  classify_pdf_type03.py  classify_pdf_type04.py  data_analysis.py  要求.md
src/data_analysis/analysis_results/: embeddings.npy
src/data_analysis/analysis_results001/: embeddings.npy
src/model/: augmentations.py  build_index.py  evaluate_retrieval.py  query_index.py  simsiam.py  simsiam2.py  simsiam2_training.py  simsiam_module.py  simsiam_sweep.py  train_simsiam.py
src/model/ablation/: ablation_utils.py  note.md  tta_gc_analysis.py  visualize_results.py
src/training/: __init__.py  config.py  experiment_logger.py  timer.py
src/utils/: DirectoryMapper.py  check_deps.py  cool_title.py  file_loader.py  folder_structure.txt  generate_ascii_banner.py  metadata.py  torch_test.py
src/vector_search/: __init__.py  database.py  debug_pipeline.py  engine.py  feature_extractor.py  indexer.py  interfaces.py  test.py  utils.py  visualizer.py
v2/: .gitignore  README.md  ablation_train.py  analyze_data.py  analyze_data_notebook.ipynb  analyze_data_notebook02.ipynb  calculate_stats.py  debug_path.py  evaluate.py  plot_results.py  prepare_data.py  process_data.py  requirements.txt  train.py  training_comparison_report.md  v2_training_pipeline.ipynb
v2/configs/: config.yaml  default.yaml  default_config.yaml  eval.yaml  minimal_test.yaml
v2/configs/ablation/: 01_baseline.yaml  02_no_topology.yaml  03_no_cc.yaml  04_no_augmentation.yaml  05_no_logo.yaml  06_all_preprocessing.yaml
v2/configs/experiment/: baseline.yaml  baseline_tlarge.yaml  baseline_tsmall.yaml  exp_a.yaml  exp_a_tlarge.yaml  exp_a_tsmall.yaml  exp_b.yaml  exp_b_tlarge.yaml  exp_b_tsmall.yaml
v2/scripts/: calculate_feature_distances.py  image_aspect_ratio_manager.py  image_aspect_ratio_web_ui.py  mock_build_dataset.py  move_error_images.py  plot_academic_charts.py  plot_academic_retrieval_analysis.py  prepare_data.py  run_all_experiments.py  train.py  validation_set_builder.py
v2/src/: config.py  logger.py
v2/src/analysis/: __init__.py  eda.py  preview.py
v2/src/config/: structured.py
v2/src/core/: __init__.py  config_manager.py  exceptions.py  logger.py
v2/src/data/: extraction.py  logo_removal.py  pdf_converter.py  preprocessing.py  splitter.py  topology.py
v2/src/dataset/: dataloader.py  dataset.py  gpu_transforms.py  labeled_dataset.py  transforms.py
v2/src/engine/: trainer.py
v2/src/evaluation/: evaluator.py  metrics.py
v2/src/experiment/: __init__.py  reporter.py  tracker.py
v2/src/model/: backbone.py  loss.py  simsiam.py
v2/src/models/: __init__.py  backbones.py  base.py  loss.py  simsiam.py
v2/src/tools/: image_preprocessing3.py  image_preprocessor.py  pdf_converter.py  splitter.py
v2/src/trainer/: __init__.py  engine.py
v2/src/trainer/callbacks/: __init__.py  checkpoint.py  tracker.py
v2/src/training/: checkpoint.py  trainer.py
v2/src/utils/: __init__.py  experiment_logger.py  metrics.py  seed.py  system_monitor.py  timer.py
v3/: TUTORIAL.md  extract_notebook.py  precompute_features.py  prepare_data.py  regenerate_seeds.py  run_gui.sh  simsiam_training.ipynb  simsiam_training.py  simsiam_training_extracted.py
v3/expert_gui/: app.py
v3/expert_gui/static/: script.js  style.css
v3/expert_gui/templates/: index.html
v3/src/: __init__.py  config.py
v3/src/analysis/: eda.py
v3/src/evaluation/: metrics.py
v3/src/model/: __init__.py  loss.py  simsiam.py
v3/src/training/: __init__.py  timer.py  trainer.py
v4/: README.md  main.py  v4_config.yaml  v4_config_test.yaml  verify_v4.py
v4/src/: __init__.py  config.py  criterion.py  data_pipeline.py  image_preprocessing.py  logger.py  mlops.py  models.py  trainer.py
