[project]
name = "engineering-image-retrieval-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "cupy-cuda12x>=13.6.0",
    "faiss-cpu>=1.12.0",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "nvidia-ml-py>=13.580.82",
    "open-clip-torch>=3.2.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.2.2",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "psutil>=7.0.0",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "pyside6>=6.9.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "sentence-transformers>=5.1.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
